# udem

./: .gitignore
Nube/: Documento.docx  Final.ipynb  Trabajo Final Presentacion.pptx  Trabajo Final PresentacionV2.pptx  XGBoost_Pipeline_Adjusted.ipynb  clavesec2.pem  custom_models.ipynb  jeisson.velasquez_accessKeys.csv  sagemaker-feature-model-buildingv2.ipynb  (+1 more)
Nube/MLOps-AWS/MLOps-AWS-main/MLOps-AWS-main/: README.md  pyproject.toml
Nube/MLOps-AWS/MLOps-AWS-main/MLOps-AWS-main/Buckets/: README.md
Nube/MLOps-AWS/MLOps-AWS-main/MLOps-AWS-main/Custom_Models/custom_with_tensor_flow/: mnist-tf2.py
Nube/MLOps-AWS/MLOps-AWS-main/MLOps-AWS-main/Dockers/: README.md
Nube/MLOps-AWS/MLOps-AWS-main/MLOps-AWS-main/Dockers/flask-app/: app.py
Nube/MLOps-AWS/MLOps-AWS-main/MLOps-AWS-main/Feature_Engineering/: README.md  VarianceInflationFactor.md  custom_transformer.py  example_arg_parser.py
Nube/MLOps-AWS/MLOps-AWS-main/MLOps-AWS-main/Feature_Engineering/Dataset/: data_description.txt
Nube/MLOps-AWS/MLOps-AWS-main/MLOps-AWS-main/Pipelines-Sagemaker/: abalone_pipeline.ipynb  meet_dataset.ipynb
Nube/MLOps-AWS/MLOps-AWS-main/MLOps-AWS-main/SageMaker/: README.md
Proyecto 1/: README.md  (+1 more)
Proyecto 2/: MateriasPrimasConsolidado.csv  MateriasPrimasConsolidado.xlsx  Proyecto2.ipynb  Proyecto2_Train.ipynb  Proyecto2_V2.ipynb  app.py  pyproject.toml
Proyecto 2/infrastructure/: dev.tfvars  ec2.tf  iam.tf  network.tf  outputs.tf  s3.tf  security_group.tf  terraform.tfstate  terraform.tfstate.backup  user_data.sh  variables.tf
Proyecto 2/src/: main.py  modelo_gb.pkl  train.py
(+4 files in other folders)
