[tool.poetry]
name = "mlops-aws"
version = "1.0.0"
description = ""
authors = ["CamilaCortex <mariadurangoai@gmail.com>"]
readme = "README.md"
packages = [{include = "mlops_aws"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
